--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <div class="promo-content text-center">
                         <img src="img/icon-1.png" alt="icon">
                         <!-- <h3>Хялбар</h3> -->
-                        <p>Хэзээ ч, Хаанаас ч, хүссэн цагтаа цахимаар цаг күахиалах боломжтой</p>
+                        <p>Хэзээ ч, Хаанаас ч, хүссэн цагтаа цахимаар цаг захиалах боломжтой</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 xs-padding wow fadeInUp" data-wow-delay="200ms"
@@ -181,7 +181,6 @@
                                 <i class="icon-gears"></i>
                                 <h3>Систем хангамж</h3>
                                 <p>Байгууллагад зориулсан хэзээ ч, хаанаас ч хүссэн үедээ шалгах</p>
-                                <a href="#">Read More</a>
                             </div>
                         </div>
                         <div class="col-sm-6 pd-15 feature-item wow fadeInUp" data-wow-delay="400ms"
@@ -190,7 +189,6 @@
                                 <i class="icon-recycle"></i>
                                 <h3>Цогц маркетинг</h3>
                                 <p>Хэрэглэгчдын зан төлөвт суурилсан маркетинг үйлчилгээ</p>
-                                <a href="#">Read More</a>
                             </div>
                         </div>
                         <div class="col-sm-6 pd-15 feature-item wow fadeInUp" data-wow-delay="500ms"
@@ -199,16 +197,14 @@
                                 <i class="icon-pricetags"></i>
                                 <h3>Шинэлэг</h3>
                                 <p>Олон талт үйлчилгээг багтаасан цогц платформ.</p>
-                                <a href="#">Read More</a>
                             </div>
                         </div>
                         <div class="col-sm-6 pd-15 feature-item wow fadeInUp" data-wow-delay="600ms"
                             data-wow-duration="1000ms">
                             <div class="feature-box">
                                 <i class="icon-shield "></i>
-                                <h3>Лоялати</h3>
+                                <h3>Лояалти</h3>
                                 <p>Үнэнч хэрэглэгдэд зориулсан гишүүнчлэл, хөнгөлөлт.</p>
-                                <a href="#">Read More</a>
                             </div>
                         </div>
                     </div>
@@ -221,8 +217,7 @@
     <section id="screenshots" class="screenshots-section bd-bottom padding">
         <div class="container">
             <div class="section-heading mb-40 text-center wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1000ms">
-                <span>Screenshots</span>
-                <h2>Апликэйшний талаар товч танилцуулга </h2>
+                <h2>Апликейшний талаар танилцуулга</h2>
                 <!-- <p>Our users are impatient. They're probably distracted too. Keep it simple<br> and beautiful, fun and functional.</p> -->
             </div>
             <div class="swiper-container">
@@ -294,7 +289,7 @@
         <div class="container">
             <div class="section-heading mb-40 text-center wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1000ms">
                 <span>Баг хамт олон</span>
-                <h2>Энхүү төслийг хөгжүүлсэн гишүүд</h2>
+                <h2>Төслийн багийн гишүүд</h2>
             </div>
             <div class="row team-wrap">
                 <!-- <div class="col-lg-3 col-sm-6 sm-padding">
@@ -558,7 +553,7 @@
                         <h3>Холбоо барих</h3>
                         <ul class="widget-list">
                             <li><a href="#">Утас: 7600 2001</a></li>
-                            <li><a href="#">И-Мэйл:contact@funplus.mn.com</a></li>
+                            <li><a href="#">И-Мэйл: contact@funplus.mn.com</a></li>
                         </ul>
                     </div>
                 </div>
