--- a/index.html
+++ b/index.html
@@ -485,8 +485,12 @@
                 <div class="col-md-7">
                     <div class="download-content wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1000ms">
                         <h2>Та манай Апликэйшнийг татахыг хүсвэл доорх линкээр татна уу</h2>
-                        <a class="download-btn" href="#"><img src="img/apple_store.png" alt="Download App Store"></a>
-                        <a class="download-btn" href="#"><img src="img/google_play.png" alt="Download Play Store"></a>
+                        <div class="hero_btn">
+                            <a class="download-btn" href="#"><img src="img/apple_store.png"
+                                    alt="Download App Store"></a>
+                            <a class="download-btn" href="#"><img src="img/google_play.png"
+                                    alt="Download Play Store"></a>
+                        </div>
                     </div>
                 </div>
                 <div class="download-mockup d-none d-md-block wow fadeInUp" data-wow-delay="0ms"
