--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                         <ul class="nav">
                             <li><a data-scroll class="nav-link active" href="#home">Нүүр<span
                                         class="sr-only">(current)</span></a></li>
-                            <li><a data-scroll class="nav-link" href="#features"></a></li>
-                            <li><a data-scroll class="nav-link" href="#1234">давуу тал</a></li>
-                            <li><a data-scroll class="nav-link" href="#screenshots">Танилцуулга</a></li>
+                            <!-- <li><a data-scroll class="nav-link" href="#features"></a></li> -->
+                            <li><a data-scroll class="nav-link" href="#1234">ФанПлас Апп</a></li>
+                            <li><a data-scroll class="nav-link" href="#screenshots">Гэрээт харилцагч</a></li>
                             <!-- <li><a data-scroll class="nav-link" href="#testimonial">Бидний тухай</a></li> -->
                             <li><a data-scroll class="nav-link" href="#download">Холбоо барих</a></li>
 
@@ -86,7 +86,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>"FunPlus" <span class="Header_text"> цахим цаг захиалгын апликэйшн </span></h1>
-                <p class="p_text">Хэрэглэгчийн сэтгэл ханамжид суурилсан цогц систем</p>
+                <p class="p_text">Хэрэглэгчийн сэтгэл ханамжид суурилсан шинэлэг шийдэл</p>
                 <div class="hero_btn">
                     <a href="#"><img src="img/apple_store.png" alt="appstore"></a>
                     <a href="#"><img src="img/google_play.png" alt="playstore"></a>
@@ -116,7 +116,7 @@
                     <div class="promo-content text-center">
                         <img src="img/icon-1.png" alt="icon">
                         <!-- <h3>Хялбар</h3> -->
-                        <p>Хэзээ ч, Хаанаас ч, хүссэн цагтаа цахимаар цаг захиалах боломжтой</p>
+                        <p>Хэзээ ч, хаанаас ч, хүссэн цагтаа цахимаар цаг захиалах боломжтой</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 xs-padding wow fadeInUp" data-wow-delay="200ms"
@@ -124,7 +124,7 @@
                     <div class="promo-content text-center">
                         <img src="img/icon-2.png" alt="icon">
                         <!-- <h3>Технологи</h3> -->
-                        <p>Хурдан шуурхай ашиглах бүрд урамшуулалтай</p>
+                        <p>Хэрэглэх бүрдээ урамшуулал ав” гэх</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 xs-padding wow fadeInUp" data-wow-delay="300ms"
@@ -132,7 +132,7 @@
                     <div class="promo-content text-center">
                         <img src="img/icon-3.png" alt="icon">
                         <!-- <h3>Шинэлэг</h3> -->
-                        <p>Байгууллагад зориулсан шинэлэг систем хангамж </p>
+                        <p>Үйлчилгээний газруудад зориулсан шинэлэг шийдэл </p>
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
             <div class="row video-wrap d-felx align-items-center">
                 <div class="col-md-6 xs-padding wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1000ms">
                     <div class="video-content">
-                        <h2>Үйчилгээний давуу тал</h2>
+                        <h2>Гэрээт харилцагч болсноор</h2>
                         <ul class="video-list">
                             <li>Цогц маркетинг</li>
                             <li>Систем хангамж</li>
@@ -217,7 +217,7 @@
     <section id="screenshots" class="screenshots-section bd-bottom padding">
         <div class="container">
             <div class="section-heading mb-40 text-center wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1000ms">
-                <h2>Апликейшний талаар танилцуулга</h2>
+                <h2>Таны цагийг хэмнэнэ 😉</h2>
                 <!-- <p>Our users are impatient. They're probably distracted too. Keep it simple<br> and beautiful, fun and functional.</p> -->
             </div>
             <div class="swiper-container">
@@ -484,7 +484,7 @@
             <div class="row">
                 <div class="col-md-7">
                     <div class="download-content wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1000ms">
-                        <h2>Та манай Апликэйшнийг татахыг хүсвэл доорх линкээр татна уу</h2>
+                        <h2>Бидэнтэй нэгдээрэй”</h2>
                         <div class="hero_btn">
                             <a class="download-btn" href="#"><img src="img/apple_store.png"
                                     alt="Download App Store"></a>
@@ -541,7 +541,7 @@
                 <div class="col-md-3 col-sm-6 xs-padding">
                     <div class="widget-content">
                         <a href="#"><img src="img/FunLogo.svg" alt="logo"></a>
-                        <p>Манай Веб сайттай танилцсан танд баярлалаа
+                        <p>Захиал, Зугаал, Зугаац
                         </p>
                         <ul class="social-icon">
                             <li><a href="https://www.facebook.com/Funplus.mn" target="_black"><i
@@ -557,7 +557,7 @@
                         <h3>Холбоо барих</h3>
                         <ul class="widget-list">
                             <li><a href="#">Утас: 7600 2001</a></li>
-                            <li><a href="#">И-Мэйл: contact@funplus.mn.com</a></li>
+                            <li><a href="#">И-Мэйл: contact@funplus.mn</a></li>
                         </ul>
                     </div>
                 </div>
@@ -585,7 +585,7 @@
 
     <footer class="footer-section align-center">
         <div class="container">
-            <p> &copy; 2022 FunUnity Хөгжүүлэв </p>
+            <p> &copy; 2022 Fun Unity Team</p>
         </div>
     </footer><!-- /.footer_section -->
 
