--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <h2>Гэрээт харилцагч болсноор</h2>
                         <ul class="video-list">
                             <li>Цогц маркетинг</li>
-                            <li>Систем хангамж</li>
+                            <li>Програм хангамж</li>
                             <li>Лояалти</li>
                             <li>Захиалгын нэгдсэн платформ</li>
                         </ul>
@@ -179,15 +179,15 @@
                             data-wow-duration="1000ms">
                             <div class="feature-box">
                                 <i class="icon-gears"></i>
-                                <h3>Систем хангамж</h3>
-                                <p>Байгууллагад зориулсан хэзээ ч, хаанаас ч хүссэн үедээ шалгах</p>
+                                <h3>Цогц маркетинг</h3>
+                                <p>Захиалгын сувгаа нэмэгдүүлэх Хэрэглэгчдын зан төлөвт суурилсан маркетинг үйлчилгээШинэлэг👌</p>
                             </div>
                         </div>
                         <div class="col-sm-6 pd-15 feature-item wow fadeInUp" data-wow-delay="400ms"
                             data-wow-duration="1000ms">
                             <div class="feature-box">
                                 <i class="icon-recycle"></i>
-                                <h3>Цогц маркетинг</h3>
+                                <h3> Захиалгын сувгаа нэмэгдүүлэх</h3>
                                 <p>Хэрэглэгчдын зан төлөвт суурилсан маркетинг үйлчилгээ</p>
                             </div>
                         </div>
@@ -196,7 +196,7 @@
                             <div class="feature-box">
                                 <i class="icon-pricetags"></i>
                                 <h3>Шинэлэг</h3>
-                                <p>Олон талт үйлчилгээг багтаасан цогц платформ.</p>
+                                <p>лон талт үйлчилгээг багтаасан шинэлэг шийдэл.</p>
                             </div>
                         </div>
                         <div class="col-sm-6 pd-15 feature-item wow fadeInUp" data-wow-delay="600ms"
@@ -575,7 +575,7 @@
                 <div class="col-md-3 col-sm-6 xs-padding">
                     <div class="widget-content">
                         <h3>Хаяг</h3>
-                        <p>Монгол улс, ЧД 4-р хороо, Нэгдсэн Үндэсний гудамж, 21-101</p>
+                        <p>Монгол улс, ЧД, 4-р хороо, Нэгдсэн Үндэстний гудамж, 21-101</p>
                     </div>
                 </div>
             </div>
